Added another project

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </div>
                 <div class="work-list">
                     <div class="project">
-                        <img src="images/ArtistConnect1.png" alt="">
+                        <img src="images/ArtistConnect1.png" alt="Final Year College Project">
                         <div class="layer">
                             <h3>ArtistConnect</h3>
                             <p>A music themed social media application allowing music fans and artists to communicate,
@@ -246,16 +246,16 @@
                         </div>
                     </div>
                     <div class="project">
-                        <img src="images/ArtistConnect2.png" alt="">
+                        <img src="images/BulkEmail.png" alt="Bulk Email Sender">
                         <div class="layer">
-                            <h3>Share With Friends</h3>
-                            <p>Gather more traction for your gigs by posting on our platform</p>
+                            <h3>Bulk Email Tracker</h3>
+                            <p>A project I completed for a local business to help sale time sending mass amounts of cold sales emails.</p>
                             <a href="https://github.com/k4rldoherty/ArtistConnect"><box-icon
                                     name='link-external'></box-icon></a>
                         </div>
                     </div>
                     <div class="project">
-                        <img src="images/Scraper.png" alt="">
+                        <img src="images/Scraper.png" alt="Android Application">
                         <div class="layer">
                             <h3>Web Scraper News Application</h3>
                             <p>Engineered an Android app for multi-source web scraping, offering users the
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="project">
-                        <img src="images/StudentTracker.png" alt="">
+                        <img src="images/StudentTracker.png" alt="Student Tracker Demo">
                         <div class="layer">
                             <h3>Student Tracker Full Stack Application</h3>
                             <p>A Spring Boot React demo project I completed when practicing my full stack development
