--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         <div class="layer">
                             <h3>Bulk Email Tracker</h3>
                             <p>A project I completed for a local business to help sale time sending mass amounts of cold sales emails.</p>
-                            <a href="https://github.com/k4rldoherty/ArtistConnect"><box-icon
+                            <a href="https://github.com/k4rldoherty/BulkEmailSender-Backend"><box-icon
                                     name='link-external'></box-icon></a>
                         </div>
                     </div>
@@ -308,7 +308,7 @@
                                 animation='tada-hover'></box-icon></a>
                         <a href="https://www.linkedin.com/in/karl-doherty-084b37225/"><box-icon name='linkedin-square'
                                 size="lg" type='logo' animation='tada-hover'></box-icon></a>
-                        <a href="./Karl Doherty Resume 27_10_23 - Copy.pdf" download class="button">Download CV</a>
+                        <a href="./Karl Doherty Resume 15_01_24.pdf" download class="button">Download CV</a>
                     </div>
                 </div>
             </div>
